#21207# Creación de la transacción para formalizar la solicitud
